; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_window.c_glfwWindowHint.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_window.c_glfwWindowHint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_16__ = type { %struct.TYPE_15__ }
%struct.TYPE_15__ = type { i32, %struct.TYPE_14__, %struct.TYPE_13__, %struct.TYPE_9__ }
%struct.TYPE_14__ = type { i32, i32, i32, i32, i32, i32, i32, i8*, i8*, i8*, %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i8* }
%struct.TYPE_13__ = type { i8*, i8*, i8*, %struct.TYPE_11__, %struct.TYPE_10__, i8*, i8*, i8*, i8*, i8*, i8*, i8* }
%struct.TYPE_11__ = type { i8* }
%struct.TYPE_10__ = type { i8* }
%struct.TYPE_9__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i8*, i8*, i8*, i8* }

@_glfw = common dso_local global %struct.TYPE_16__ zeroinitializer, align 8
@GLFW_TRUE = common dso_local global i8* null, align 8
@GLFW_FALSE = common dso_local global i8* null, align 8
@GLFW_INVALID_ENUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Invalid window hint 0x%08X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glfwWindowHint(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @_GLFW_REQUIRE_INIT()
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %227 [
    i32 138, label %7
    i32 143, label %9
    i32 160, label %11
    i32 163, label %13
    i32 148, label %15
    i32 132, label %17
    i32 164, label %19
    i32 165, label %21
    i32 166, label %23
    i32 167, label %25
    i32 161, label %27
    i32 131, label %29
    i32 147, label %38
    i32 130, label %47
    i32 135, label %56
    i32 133, label %58
    i32 136, label %67
    i32 149, label %76
    i32 145, label %85
    i32 162, label %94
    i32 146, label %103
    i32 142, label %112
    i32 129, label %121
    i32 156, label %130
    i32 128, label %139
    i32 157, label %148
    i32 134, label %157
    i32 159, label %166
    i32 144, label %175
    i32 158, label %184
    i32 155, label %186
    i32 151, label %188
    i32 150, label %190
    i32 152, label %192
    i32 140, label %194
    i32 141, label %203
    i32 154, label %212
    i32 139, label %221
    i32 153, label %223
    i32 137, label %225
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 0), align 8
  br label %231

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 1), align 4
  br label %231

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 2), align 8
  br label %231

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 3), align 4
  br label %231

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 4), align 8
  br label %231

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 5), align 4
  br label %231

19:                                               ; preds = %2
  %20 = load i32, i32* %4, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 6), align 8
  br label %231

21:                                               ; preds = %2
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 7), align 4
  br label %231

23:                                               ; preds = %2
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 8), align 8
  br label %231

25:                                               ; preds = %2
  %26 = load i32, i32* %4, align 4
  store i32 %26, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 9), align 4
  br label %231

27:                                               ; preds = %2
  %28 = load i32, i32* %4, align 4
  store i32 %28, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 10), align 8
  br label %231

29:                                               ; preds = %2
  %30 = load i32, i32* %4, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %29
  %33 = load i8*, i8** @GLFW_TRUE, align 8
  br label %36

34:                                               ; preds = %29
  %35 = load i8*, i8** @GLFW_FALSE, align 8
  br label %36

36:                                               ; preds = %34, %32
  %37 = phi i8* [ %33, %32 ], [ %35, %34 ]
  store i8* %37, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 15), align 8
  br label %231

38:                                               ; preds = %2
  %39 = load i32, i32* %4, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %38
  %42 = load i8*, i8** @GLFW_TRUE, align 8
  br label %45

43:                                               ; preds = %38
  %44 = load i8*, i8** @GLFW_FALSE, align 8
  br label %45

45:                                               ; preds = %43, %41
  %46 = phi i8* [ %42, %41 ], [ %44, %43 ]
  store i8* %46, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 14), align 8
  br label %231

47:                                               ; preds = %2
  %48 = load i32, i32* %4, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %52

50:                                               ; preds = %47
  %51 = load i8*, i8** @GLFW_TRUE, align 8
  br label %54

52:                                               ; preds = %47
  %53 = load i8*, i8** @GLFW_FALSE, align 8
  br label %54

54:                                               ; preds = %52, %50
  %55 = phi i8* [ %51, %50 ], [ %53, %52 ]
  store i8* %55, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 13), align 8
  br label %231

56:                                               ; preds = %2
  %57 = load i32, i32* %4, align 4
  store i32 %57, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 11), align 4
  br label %231

58:                                               ; preds = %2
  %59 = load i32, i32* %4, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %58
  %62 = load i8*, i8** @GLFW_TRUE, align 8
  br label %65

63:                                               ; preds = %58
  %64 = load i8*, i8** @GLFW_FALSE, align 8
  br label %65

65:                                               ; preds = %63, %61
  %66 = phi i8* [ %62, %61 ], [ %64, %63 ]
  store i8* %66, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 3, i32 12), align 8
  br label %231

67:                                               ; preds = %2
  %68 = load i32, i32* %4, align 4
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %70, label %72

70:                                               ; preds = %67
  %71 = load i8*, i8** @GLFW_TRUE, align 8
  br label %74

72:                                               ; preds = %67
  %73 = load i8*, i8** @GLFW_FALSE, align 8
  br label %74

74:                                               ; preds = %72, %70
  %75 = phi i8* [ %71, %70 ], [ %73, %72 ]
  store i8* %75, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 11), align 8
  br label %231

76:                                               ; preds = %2
  %77 = load i32, i32* %4, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %79, label %81

79:                                               ; preds = %76
  %80 = load i8*, i8** @GLFW_TRUE, align 8
  br label %83

81:                                               ; preds = %76
  %82 = load i8*, i8** @GLFW_FALSE, align 8
  br label %83

83:                                               ; preds = %81, %79
  %84 = phi i8* [ %80, %79 ], [ %82, %81 ]
  store i8* %84, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 10), align 8
  br label %231

85:                                               ; preds = %2
  %86 = load i32, i32* %4, align 4
  %87 = icmp ne i32 %86, 0
  br i1 %87, label %88, label %90

88:                                               ; preds = %85
  %89 = load i8*, i8** @GLFW_TRUE, align 8
  br label %92

90:                                               ; preds = %85
  %91 = load i8*, i8** @GLFW_FALSE, align 8
  br label %92

92:                                               ; preds = %90, %88
  %93 = phi i8* [ %89, %88 ], [ %91, %90 ]
  store i8* %93, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 9), align 8
  br label %231

94:                                               ; preds = %2
  %95 = load i32, i32* %4, align 4
  %96 = icmp ne i32 %95, 0
  br i1 %96, label %97, label %99

97:                                               ; preds = %94
  %98 = load i8*, i8** @GLFW_TRUE, align 8
  br label %101

99:                                               ; preds = %94
  %100 = load i8*, i8** @GLFW_FALSE, align 8
  br label %101

101:                                              ; preds = %99, %97
  %102 = phi i8* [ %98, %97 ], [ %100, %99 ]
  store i8* %102, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 8), align 8
  br label %231

103:                                              ; preds = %2
  %104 = load i32, i32* %4, align 4
  %105 = icmp ne i32 %104, 0
  br i1 %105, label %106, label %108

106:                                              ; preds = %103
  %107 = load i8*, i8** @GLFW_TRUE, align 8
  br label %110

108:                                              ; preds = %103
  %109 = load i8*, i8** @GLFW_FALSE, align 8
  br label %110

110:                                              ; preds = %108, %106
  %111 = phi i8* [ %107, %106 ], [ %109, %108 ]
  store i8* %111, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 7), align 8
  br label %231

112:                                              ; preds = %2
  %113 = load i32, i32* %4, align 4
  %114 = icmp ne i32 %113, 0
  br i1 %114, label %115, label %117

115:                                              ; preds = %112
  %116 = load i8*, i8** @GLFW_TRUE, align 8
  br label %119

117:                                              ; preds = %112
  %118 = load i8*, i8** @GLFW_FALSE, align 8
  br label %119

119:                                              ; preds = %117, %115
  %120 = phi i8* [ %116, %115 ], [ %118, %117 ]
  store i8* %120, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 6), align 8
  br label %231

121:                                              ; preds = %2
  %122 = load i32, i32* %4, align 4
  %123 = icmp ne i32 %122, 0
  br i1 %123, label %124, label %126

124:                                              ; preds = %121
  %125 = load i8*, i8** @GLFW_TRUE, align 8
  br label %128

126:                                              ; preds = %121
  %127 = load i8*, i8** @GLFW_FALSE, align 8
  br label %128

128:                                              ; preds = %126, %124
  %129 = phi i8* [ %125, %124 ], [ %127, %126 ]
  store i8* %129, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 5), align 8
  br label %231

130:                                              ; preds = %2
  %131 = load i32, i32* %4, align 4
  %132 = icmp ne i32 %131, 0
  br i1 %132, label %133, label %135

133:                                              ; preds = %130
  %134 = load i8*, i8** @GLFW_TRUE, align 8
  br label %137

135:                                              ; preds = %130
  %136 = load i8*, i8** @GLFW_FALSE, align 8
  br label %137

137:                                              ; preds = %135, %133
  %138 = phi i8* [ %134, %133 ], [ %136, %135 ]
  store i8* %138, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 4, i32 0), align 8
  br label %231

139:                                              ; preds = %2
  %140 = load i32, i32* %4, align 4
  %141 = icmp ne i32 %140, 0
  br i1 %141, label %142, label %144

142:                                              ; preds = %139
  %143 = load i8*, i8** @GLFW_TRUE, align 8
  br label %146

144:                                              ; preds = %139
  %145 = load i8*, i8** @GLFW_FALSE, align 8
  br label %146

146:                                              ; preds = %144, %142
  %147 = phi i8* [ %143, %142 ], [ %145, %144 ]
  store i8* %147, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 3, i32 0), align 8
  br label %231

148:                                              ; preds = %2
  %149 = load i32, i32* %4, align 4
  %150 = icmp ne i32 %149, 0
  br i1 %150, label %151, label %153

151:                                              ; preds = %148
  %152 = load i8*, i8** @GLFW_TRUE, align 8
  br label %155

153:                                              ; preds = %148
  %154 = load i8*, i8** @GLFW_FALSE, align 8
  br label %155

155:                                              ; preds = %153, %151
  %156 = phi i8* [ %152, %151 ], [ %154, %153 ]
  store i8* %156, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 10, i32 0), align 8
  br label %231

157:                                              ; preds = %2
  %158 = load i32, i32* %4, align 4
  %159 = icmp ne i32 %158, 0
  br i1 %159, label %160, label %162

160:                                              ; preds = %157
  %161 = load i8*, i8** @GLFW_TRUE, align 8
  br label %164

162:                                              ; preds = %157
  %163 = load i8*, i8** @GLFW_FALSE, align 8
  br label %164

164:                                              ; preds = %162, %160
  %165 = phi i8* [ %161, %160 ], [ %163, %162 ]
  store i8* %165, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 2), align 8
  br label %231

166:                                              ; preds = %2
  %167 = load i32, i32* %4, align 4
  %168 = icmp ne i32 %167, 0
  br i1 %168, label %169, label %171

169:                                              ; preds = %166
  %170 = load i8*, i8** @GLFW_TRUE, align 8
  br label %173

171:                                              ; preds = %166
  %172 = load i8*, i8** @GLFW_FALSE, align 8
  br label %173

173:                                              ; preds = %171, %169
  %174 = phi i8* [ %170, %169 ], [ %172, %171 ]
  store i8* %174, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 1), align 8
  br label %231

175:                                              ; preds = %2
  %176 = load i32, i32* %4, align 4
  %177 = icmp ne i32 %176, 0
  br i1 %177, label %178, label %180

178:                                              ; preds = %175
  %179 = load i8*, i8** @GLFW_TRUE, align 8
  br label %182

180:                                              ; preds = %175
  %181 = load i8*, i8** @GLFW_FALSE, align 8
  br label %182

182:                                              ; preds = %180, %178
  %183 = phi i8* [ %179, %178 ], [ %181, %180 ]
  store i8* %183, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 2, i32 0), align 8
  br label %231

184:                                              ; preds = %2
  %185 = load i32, i32* %4, align 4
  store i32 %185, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 0), align 8
  br label %231

186:                                              ; preds = %2
  %187 = load i32, i32* %4, align 4
  store i32 %187, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 1), align 4
  br label %231

188:                                              ; preds = %2
  %189 = load i32, i32* %4, align 4
  store i32 %189, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 2), align 8
  br label %231

190:                                              ; preds = %2
  %191 = load i32, i32* %4, align 4
  store i32 %191, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 3), align 4
  br label %231

192:                                              ; preds = %2
  %193 = load i32, i32* %4, align 4
  store i32 %193, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 4), align 8
  br label %231

194:                                              ; preds = %2
  %195 = load i32, i32* %4, align 4
  %196 = icmp ne i32 %195, 0
  br i1 %196, label %197, label %199

197:                                              ; preds = %194
  %198 = load i8*, i8** @GLFW_TRUE, align 8
  br label %201

199:                                              ; preds = %194
  %200 = load i8*, i8** @GLFW_FALSE, align 8
  br label %201

201:                                              ; preds = %199, %197
  %202 = phi i8* [ %198, %197 ], [ %200, %199 ]
  store i8* %202, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 9), align 8
  br label %231

203:                                              ; preds = %2
  %204 = load i32, i32* %4, align 4
  %205 = icmp ne i32 %204, 0
  br i1 %205, label %206, label %208

206:                                              ; preds = %203
  %207 = load i8*, i8** @GLFW_TRUE, align 8
  br label %210

208:                                              ; preds = %203
  %209 = load i8*, i8** @GLFW_FALSE, align 8
  br label %210

210:                                              ; preds = %208, %206
  %211 = phi i8* [ %207, %206 ], [ %209, %208 ]
  store i8* %211, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 8), align 8
  br label %231

212:                                              ; preds = %2
  %213 = load i32, i32* %4, align 4
  %214 = icmp ne i32 %213, 0
  br i1 %214, label %215, label %217

215:                                              ; preds = %212
  %216 = load i8*, i8** @GLFW_TRUE, align 8
  br label %219

217:                                              ; preds = %212
  %218 = load i8*, i8** @GLFW_FALSE, align 8
  br label %219

219:                                              ; preds = %217, %215
  %220 = phi i8* [ %216, %215 ], [ %218, %217 ]
  store i8* %220, i8** getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 7), align 8
  br label %231

221:                                              ; preds = %2
  %222 = load i32, i32* %4, align 4
  store i32 %222, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 5), align 4
  br label %231

223:                                              ; preds = %2
  %224 = load i32, i32* %4, align 4
  store i32 %224, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 1, i32 6), align 8
  br label %231

225:                                              ; preds = %2
  %226 = load i32, i32* %4, align 4
  store i32 %226, i32* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @_glfw, i32 0, i32 0, i32 0), align 8
  br label %231

227:                                              ; preds = %2
  %228 = load i32, i32* @GLFW_INVALID_ENUM, align 4
  %229 = load i32, i32* %3, align 4
  %230 = call i32 @_glfwInputError(i32 %228, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %229)
  br label %231

231:                                              ; preds = %227, %225, %223, %221, %219, %210, %201, %192, %190, %188, %186, %184, %182, %173, %164, %155, %146, %137, %128, %119, %110, %101, %92, %83, %74, %65, %56, %54, %45, %36, %27, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7
  ret void
}

declare dso_local i32 @_GLFW_REQUIRE_INIT(...) #1

declare dso_local i32 @_glfwInputError(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
